--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -5,8 +5,21 @@
     <string name="title_routers">Routers</string>
     <string name="title_celltowers">Cell towers</string>
     <string name="google_api_key">AIzaSyCuQIbpw2ozLYGWtZPDHDMpksqNMuwWFH8</string>
-    <string name="coordinates">COORDINATES:</string>
-    <string name="latlong">Longitude: %.3f, Latitude: %.3f</string>
-    <string name="enable_gps">Please enable your gps</string>
-    <string name="permission_request">App requires location permission</string>
+
+
+    <string name="button_text_start">Start Tracking</string>
+    <string name="button_text_end">End Tracking</string>
+    <string name="action_settings">Settings</string>
+    <string name="permission_status_granted">Location Permission is Granted</string>
+    <string name="permission_status_denied">Location Permission is Denied</string>
+    <string name="permission_status_blocked">Location Permission is Blocked</string>
+    <string name="gps_status_enabled">"GPS is Enabled"</string>
+    <string name="gps_status_disabled">"GPS is Disabled"</string>
+    <string name="gps_required_title">GPS Required</string>
+    <string name="permission_required_title">Location Permission Required</string>
+    <string name="gps_required_body">Enable GPS otherwise location tracking won\'t work</string>
+    <string name="permission_required_body">Allow otherwise location tracking won\'t work</string>
+    <string name="permission_blocked_body">Location Permission has been set not to ask again! Please provide it from Settings.</string>
+    <string name="simulate_notifications">Simulate Notification(s)</string>
+    <string name="click_to_retry"> (click to retry)</string>
 </resources>
