--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_home">Home</string>
     <string name="title_routers">Routers</string>
     <string name="title_celltowers">Cell towers</string>
-    <string name="google_api_key">AIzaSyBbMVqqgFkXy8l80SSAITyONUTW_PpL3BA-M</string>
+    <string name="google_api_key">AIzaSyC95vnmTsAOfnAWpQjcnXdElVss7Dnr5IY</string>
     <string name="action_settings">Settings</string>
 
     <string name="permission_status_granted">Location Permission is Granted</string>
@@ -13,8 +13,13 @@
     <string name="gps_status_disabled">"GPS is Disabled"</string>
     <string name="gps_required_title">GPS Required</string>
 
+    <string name="wifi_status_enabled">"WiFi is Enabled"</string>
+    <string name="wifi_status_disabled">"WiFi is Disabled"</string>
+    <string name="wifi_required_title">WiFi Required</string>
+
     <string name="permission_required_title">Location Permission Required</string>
     <string name="gps_required_body">Enable GPS otherwise location tracking won\'t work</string>
+    <string name="wifi_required_body">Enable WiFi otherwise application won\'t work</string>
     <string name="permission_required_body">Allow otherwise location tracking won\'t work</string>
 
     <string name="click_to_retry"> (click to retry)</string>
@@ -28,9 +33,17 @@
     <string name="action_refresh">Refresh</string>
     <string name="action_scan_wifi">Wi-Fi Scan</string>
 
-    <string name="station_frequency">%1$s MHz</string>
-    <string name="station_level">%1$s dBm</string>
+    <string name="station_frequency">Frequency: %1$s MHz</string>
+    <string name="station_level">Level: %1$s dBm</string>
 
-    <string name="signal_strength">%1$s dBm</string>
+    <string name="signal_strength">Level: %1$s dBm</string>
+
+    <string name="cid_text">Cell ID: %1$s</string>
+    <string name="lac_text">Location Area Code: %1$s</string>
+    <string name="mcc_text">Mobile Country Code: %1$s</string>
+    <string name="mnc_text">Mobile Network Code: %1$s</string>
+
+    <string name="ssid_text">SSID: %1$s</string>
+    <string name="mac_text">MAC Address: %1$s</string>
 
 </resources>
