--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
     <string name="title_home">Home</string>
     <string name="title_routers">Routers</string>
     <string name="title_celltowers">Cell towers</string>
-    <string name="google_api_key">AIzaSyCkZcvE_QrR-PCCpBP1g-LgrIOywhqSuAU</string>
     <string name="action_settings">Settings</string>
+    <string name="map_id">ca438aba3f15d0a1</string>
+    <string name="google_maps_api_key">AIzaSyCkZcvE_QrR-PCCpBP1g-LgrIOywhqSuAU</string>
 
     <string name="permission_status_granted">Permissions are Granted</string>
     <string name="permission_status_denied">Permissions are Denied</string>
